@@ -129,7 +129,7 @@ int apply_auto(object *op) {
             SET_FLAG(tmp, FLAG_UNPAID);
             object_insert_in_map_at(tmp, op->map, NULL, 0, op->x, op->y);
             CLEAR_FLAG(op, FLAG_AUTO_APPLY);
-            identify(tmp);
+            tmp = identify(tmp);
             break;
 
         case TREASURE:
