@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add code to have identified objects merge together with like objects.
+identify() modified to return object, which may be merged object.
+examine() modified to stop processing once it does a skill ident
+on an item, since the pointer is has may now be invalid.
+MSW 2010-11-18
+
 Add ability for server to provide choice of starting items for new - 
 characters - add support for sending that data and receiving and validating
 the responses.  Add DRAGON_FOCUS type which changes the dragon focus.
